P01/Tests/SyntaxErrors/nostates.tm
this is not the states line

